--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^5.1.0",
+    "dotenv": "^17.2.1",
+    "express": "^4.17.1",
+    "mongodb": "^6.18.0",
+    "mongoose": "^8.17.1"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.10"
   }
 }
